tests/errors/07_uninitialized_access.f
      PROGRAM UNINITIALIZED_ACCESS
      INTEGER A
      PRINT *, A
      END
